# embassy-ai-mmt-demo

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  release.ps1  requirements.txt  start-viewer.ps1  update-referencemodels.ps1  update-toolkit.ps1  update-toolkit.sh
.github/: CODEOWNERS
.github/workflows/: dependency-update.yml  project.yml  release.yml  validate.yml
ontology-hub/: generate_efs.py
ontology-hub/mappings/: README.md
ontology-hub/ontologies/: README.md
ontology-hub/ontologies/embassy/: embassy_schema_ttl
ontology-hub/ontologies/embassy/Data/Samples/shipments/raw/: email_complex.txt  (+4 more)
ontology-hub/ontology-hub/output/: embassy_schem.ttl
ontology-hub/shapes/: README.md
ontology-viewer/: .gitignore  package-lock.json
ontology-viewer-old/: package-lock.json  package.json
ontology-viewer-old/app/: layout.tsx  page.tsx
ontology-viewer-old/app/api/ontologies/[filename]/: route.ts
ontology-viewer-old/components/: NodeDetails.tsx  OntologyGraph.tsx  OntologySelector.tsx  SearchFilter.tsx
ontology-viewer-old/types/: ontology.ts
ontology-viewer/app/: layout.tsx  page.tsx
ontology-viewer/app/api/ontologies/: route.ts
ontology-viewer/components/: GanttChart.tsx  InstanceTreeView.tsx  LanguageSwitcher.tsx  NodeDetails.tsx  OntologyGraph.tsx  OntologySelector.tsx  SearchFilter.tsx
ontology-viewer/contexts/: LanguageContext.tsx
ontology-viewer/hooks/: useInstanceLoader.ts  useOntologyLoader.ts
ontology-viewer/lib/: localizedText.ts  rdfParser.ts  translations.ts
ontology-viewer/types/: ontology.ts
(+24 files in other folders)
